[package]
name = "cargo-gba"
version = "0.0.4"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
description = "A cargo plugin to help ease the process of GBA game creation."
repository = "https://github.com/rust-console/cargo-gba"
readme = "README.md"
keywords = ["gba"]
categories = ["development-tools::build-utils","development-tools::cargo-plugins"]
license = "GPL-3.0-or-later"

#[badges]
# Appveyor: `repository` is required. `branch` is optional; default is `master`
# `service` is optional; valid values are `github` (default), `bitbucket`, and
# `gitlab`; `id` is optional; you can specify the appveyor project id if you
# want to use that instead. `project_name` is optional; use when the repository
# name differs from the appveyor project name.
#appveyor = { repository = "...", branch = "master", service = "github" }

# Travis CI: `repository` in format "<user>/<project>" is required.
# `branch` is optional; default is `master`
#travis-ci = { repository = "...", branch = "master" }
